# 8051

./: .gitignore  CMakeLists.txt  README.md
include/: cpu.h  gui.h  instructions.h  memory.h  timer.h
include/instructions/: mov.h  nop.h
src/: cpu.c  gui.c  instructions.c  main.c  memory.c
src/instructions/: mov.c  nop.c
